# ROBO-FEUP

./: CMakeLists.txt  README.md  package.xml  prepare.sh
include/: controller.h
proj1/src/test/: CMakeLists.txt  package.xml  test.cpp
src/: controller.cpp  main.cpp
src/resources/: robot.xml  vmap.yaml
src/turtlesim_cleaner/: package.xml
stdr_files/stdr_launchers/launch/: standart_env.launch  standart_env_v.launch  standart_env_w.launch  standart_env_w2.launch
stdr_files/stdr_resources/maps/: vmap.yaml  wmap-inside.yaml  wmap.yaml
stdr_files/stdr_resources/resources/robots/: robo.yaml  robo_wall.yaml
