<?xml version="1.0"?>
<package format="2">
  <name>robo_feup</name>
  <version>0.3.2</version>
  <description>Robot feup line follow.</description>

  <maintainer email="up201405079@fe.up.pt">Nuno Martins</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>stdr_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>

</package>
